--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@tamagui/theme": "^1.132.15",
     "@tanstack/react-query": "^5.84.1",
     "axios": "^1.11.0",
-    "date-fns": "^2.30.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "expo": "~53.0.20",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
@@ -36,6 +38,7 @@
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
     "expo-localization": "~16.1.6",
+    "expo-location": "~18.1.6",
     "expo-router": "~5.1.4",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -60,13 +63,13 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
+    "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17",
     "tamagui": "^1.132.15",
-    "zod": "^4.0.14",
-    "expo-location": "~18.1.6"
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
