--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native-stack": "^7.3.23",
     "@tamagui/config": "^1.132.15",
     "@tamagui/core": "^1.132.15",
+    "@tamagui/sheet": "^1.132.16",
     "@tamagui/theme": "^1.132.15",
     "@tanstack/react-query": "^5.84.1",
     "axios": "^1.11.0",
@@ -36,6 +37,7 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.7",
     "expo-localization": "~16.1.6",
     "expo-location": "~18.1.6",
@@ -58,6 +60,9 @@
     "react-native": "0.79.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-heic-converter": "^1.3.3",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "5.4.0",
