booking page done with faceDrawer

--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17",
     "tamagui": "^1.132.15",
-    "zod": "^4.0.14"
+    "zod": "^4.0.14",
+    "expo-image-manipulator": "~13.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
