--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.7",
     "expo-localization": "~16.1.6",
@@ -72,10 +73,10 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "socket.io-client": "^4.6.1",
     "tailwindcss": "^3.4.17",
     "tamagui": "^1.132.15",
-    "zod": "^4.0.14",
-    "expo-image-manipulator": "~13.1.7"
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
